# UBB-INFO

./: README.md
An 1/Semestrul 1/Arhitectura Sistemelor de Calcul/Lab 11/: lab11_ex8.asm  lab11_ex8.lst  lab11_procedural.asm  lab11_procedural.lst
An 1/Semestrul 1/Arhitectura Sistemelor de Calcul/Lab 3/: lab3_s1p24.asm  lab3_s1p24.lst  lab3_s1p9.asm  lab3_s1p9.lst  lab3_s2p24.asm  lab3_s2p24.lst  lab3_s2p9.asm  lab3_s2p9.lst  lab3_s3p24.asm  lab3_s3p24.lst  lab3_s3p24_2.asm  lab3_s3p24_2.lst  lab3_s3p9.asm  lab3_s3p9.lst  lab3_s3p9_2.asm  lab3_s3p9_2.lst
An 1/Semestrul 1/Arhitectura Sistemelor de Calcul/Lab 4/: lab4_biti12.asm  lab4_biti27.asm  lab4_ex30.asm  lab4_ex30.lst
An 1/Semestrul 1/Arhitectura Sistemelor de Calcul/Lab 5/: lab5_p11.asm  lab5_p11.lst  lab5_p26.asm  lab5_p26.lst
An 1/Semestrul 1/Arhitectura Sistemelor de Calcul/Lab 6/: lab6_p18.asm  lab6_p18.lst  lab6_p29.asm  lab6_p29.lst  lab6_p3.asm  lab6_p3.lst
An 1/Semestrul 1/Arhitectura Sistemelor de Calcul/Lab 8/: lab8_ex.asm  lab8_ex.lst  lab8_p20.asm  lab8_p20.lst  lab8_p5.asm  lab8_p5.lst  lab8_s2p20.asm  lab8_s2p20.lst  lab8_s2p5.asm  lab8_s2p5.lst  lab8_s2p5_incercare2.asm
An 1/Semestrul 1/Arhitectura Sistemelor de Calcul/Practic/: MarcuEmanuel.asm  MarcuEmanuel.lst
An 1/Semestrul 1/Arhitectura Sistemelor de Calcul/Probleme Suplimentare/: alex.asm  alex.lst  algoritm.asm  algoritm.lst  build.bat  exercitiubonus.asm  exercitiubonus.lst  fac_s3p25.asm  fac_s3p25.lst  problema_subiect3.asm  problema_subiect3.lst  s1p24.asm  s1p9.asm  s2p24.asm  s2p24.lst  s2p9.asm  s2p9.lst  (+20 more)
An 1/Semestrul 2/Programare Orientata Obiect/Lab 10-14 QT/oop_qt/oop_qt/: CMakeLists.txt  main.cpp
An 1/Semestrul 2/Programare Orientata Obiect/Lab 10-14 QT/oop_qt/oop_qt/data/: alex.csv  andrei.html  craciun  export.html  marcu.html
An 1/Semestrul 2/Programare Orientata Obiect/Lab 10-14 QT/oop_qt/oop_qt/domain/: locatar.cpp  locatar.h
An 1/Semestrul 2/Programare Orientata Obiect/Lab 10-14 QT/oop_qt/oop_qt/gui/: CosReadOnlyGUI.h  LocatarTableModel.h  locatarGUI.h  notificariGUI.h
An 1/Semestrul 2/Programare Orientata Obiect/Lab 10-14 QT/oop_qt/oop_qt/repository/: locatar_repo.cpp  locatar_repo.h
An 1/Semestrul 2/Programare Orientata Obiect/Lab 10-14 QT/oop_qt/oop_qt/service/: locatar_service.cpp  locatar_service.h
An 1/Semestrul 2/Programare Orientata Obiect/Lab 10-14 QT/oop_qt/oop_qt/teste/: teste.cpp  teste.h
An 1/Semestrul 2/Programare Orientata Obiect/Lab 10-14 QT/oop_qt/oop_qt/utils/: observer.h  undo.cpp  undo.h
An 1/Semestrul 2/Programare Orientata Obiect/Lab 10-14 QT/oop_qt/oop_qt/validators/: exception.h  validator.cpp  validator.h
(+739 files in other folders)
